<resources>
    <string name="app_name">Shopify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_search_hint">Search for Category</string>
    <string name="brand">Brands</string>
    <string name="cartButton">Proceed To Checkout</string>
    <string name="total">Total Cost:</string>
    <string name="welcome">Welcome,</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="whishList">WhishList</string>
    <string name="price">Price:</string>
    <string name="createdAt">Created At: </string>
    <string name="login_email_hint">Email</string>
    <string name="login_pass_hint">Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="login_btn">Login</string>
    <string name="regester_TF">Dont have account ?</string>
    <string name="register_btn">SignUp</string>
    <string name="welcometo_tv">Welcome To</string>
    <string name="signupPassHint">Confirm Password</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="appartment">Appartment</string>
    <string name="building_no">Building</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="phone_number">Phone Number : </string>
    <string name="onlline_payment">Online Payment</string>
    <string name="paymrnt_method">Payment Method</string>
    <string name="cash_on_delevary">Cash on delivery</string>
    <string name="check_out">Check Out</string>
    <string name="products_fees">Products fees :</string>
    <string name="delevary_fees">Delevary Fees :</string>
    <string name="vat">VAT :</string>
    <string name="total_fees">Total Fees : </string>
    <string name="discount">Discount :</string>
    <string name="voutcher">voutcher</string>
    <string name="logout">LogOut</string>
    <string name="couponCode">Coupon Code</string>
    <string name="coupon_body">To get the discount enter the code to checkout</string>
    <string name="copy">Copy</string>
    <string name="signUpFirstName">First Name</string>
    <string name="signUpLastName">Last Name</string>
    <string name="signUpAdress">Building No,street</string>
    <string name="signUpCountry">Country</string>
    <string name="signUpCity">City</string>
    <string name="signUpPhone">Phone</string>
    <string name="add_address">Add Address</string>
    <string name="currency">Currency</string>
    <string name="pound">Pound</string>
    <string name="loginDialogTitle">You Are Not Login</string>
    <string name="loginDialogMessage">To be able to add items to the cart, you need to be logged in.</string>
    <string name="loginDialogCancel">Cancel</string>
    <string name="loginDialogOk">Login</string>

    <string name="order_list">Order List </string>
    <string name="contact_email">Name : </string>
    <string name="total_price">Total price : </string>
    <string name="address">Address : </string>
    <string name="order_items">Order items</string>
    <string name="deleteBtn">Delete</string>
    <string name="deleteMessage">Are You Sure</string>
    <string name="deleteMessageBody">You want delete this item from cart</string>
    <string name="delete_address">You want delete address </string>
    <string name="close">close</string>
    <string name="cant_delete_address">you must have default addresses</string>
    <string name="Entre_Valide_Address">Entre Valide Address</string>
    <string name="cant_delete">Sorry  you cant Delete</string>
    <string name="no_brand_found">No Brands Found</string>
    <string name="no_products">No products Found</string>
    <string name="no_orders">No Orders Yet</string>
    <string name="no_fav_item">No Favourite Item</string>


</resources>